@@ -7,6 +7,9 @@ BETA PUBLIC RELEASE VERSION 1.1.2       XX-XX-06
     * Fixed a bug in chain detection routines where PDB2PQR was unable to
       detect multiple chains inside a single unnamed chain (thanks to 
       Rachel Burdge)
+    * Fixed a second bug in chain detection routines where HETATM residues
+      with names ending in "3" were improperly chosen for termini (thanks to
+      Reut Abramovich)
 #############################################################################
 BETA PUBLIC RELEASE VERSION 1.1.1       5-3-06
 #############################################################################
